%% intex2026DBIdentity — Azure SQL (Identity)
%% Regenerate: python docs/erd/generate_azure_sqlserver_erd.py
erDiagram
  %% Azure SQL database: intex2026DBIdentity (ASP.NET Core Identity)
  %% FKs from inline CONSTRAINTs in LighthouseIdentity.sqlserver.sql
  %% Column labels in snake_case for Mermaid PNG (DB columns remain PascalCase).
  AspNetRoles ||--o{ AspNetRoleClaims : "RoleId"
  AspNetUsers ||--o{ AspNetUserClaims : "UserId"
  AspNetUsers ||--o{ AspNetUserLogins : "UserId"
  AspNetRoles ||--o{ AspNetUserRoles : "RoleId"
  AspNetUsers ||--o{ AspNetUserRoles : "UserId"
  AspNetUsers ||--o{ AspNetUserTokens : "UserId"
  AspNetRoleClaims {
    int id PK
    string role_id FK
    string claim_type
    string claim_value
  }

  AspNetRoles {
    string id PK
    string name_col
    string normalized_name
    string concurrency_stamp
  }

  AspNetUserClaims {
    int id PK
    string user_id FK
    string claim_type
    string claim_value
  }

  AspNetUserLogins {
    string login_provider PK
    string provider_key PK
    string provider_display_name
    string user_id FK
  }

  AspNetUserRoles {
    string user_id PK
    string role_id PK
  }

  AspNetUserTokens {
    string user_id PK
    string login_provider PK
    string name_col PK
    string value
  }

  AspNetUsers {
    string id PK
    string user_name
    string normalized_user_name
    string email
    string normalized_email
    bool email_confirmed
    string password_hash
    string security_stamp
    string concurrency_stamp
    string phone_number
    bool phone_number_confirmed
    bool two_factor_enabled
    datetime lockout_end
    bool lockout_enabled
    int access_failed_count
  }

  "__EFMigrationsHistory" {
    string migration_id PK
    string product_version
  }
